* Updated javadoc in Whitebox and WhiteboxImpl.
* EasyMock and Mockito extension API now supports mocking new invocations with var args parameters when var args paramters is not the first parameter (issue 163).
* Various improvements to var args handling for both methods and constructors.
* Upgraded to Javassist 3.14 (issue 295).
* Upgraded junit module to use JUnit 4.8.2 (issue 296).

Change log 1.4.6 (2010-10-13)
-----------------------------
* Changed project structure, all group id's are now "org.powermock" but most artifact id's are the same. There are two exceptions, org.powermock.tests and org.powermock.examples. Artifact module-test-powermock has been renamed to module-test-easymock and module-test-powermockito has been renamed to module-test-mockito (issue 234).
* Removed all third-party repositories from the pom's to allow for Maven central syncing.
* PowerMock can now be built with Maven 3 (issue 283).
* Prepared pom's for Maven central synching.
* Upgraded the TestNG module to version 5.14 (issue 275).
* Fixed a bug in Whitebox which caused some overriden methods to be treated as overloaded (issue 276).

Change log 1.4.5 (2010-08-30)
-----------------------------
* The EasyMock API extension should now work when testing Eclipse plugins and running the tests as PDE (JUnit Plugin) tests (issue 264)
* Deprecated "andReturn" in the stubber API and added "toReturn" instead. The API now reads e.g. "stub(method("methodName")).toReturn(new Object());"
* Added the "toThrow" method to the stubber API. You can now do e.g. "stub(method("methodName")).toThrow(new Exception());" (issue 182)